2010-03-15  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/AsyncOperationManager.cs: Use
	  corrent constant for infinite waits.

2010-03-03  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/TypeValueReference.cs: Fixed type
	  name formatting issue.

	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Fixed
	  parsing of generic type names.

2010-03-03  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/TypeValueReference.cs: Set the
	  correct type name for the type reference.

	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Added hack
	  which allows parsing single generic type names (that is,
	  when the expression is a type name).

2010-03-02  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Add a
	  better default implementation for ForceLoadType.

2010-03-01  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/DebuggerSession.cs: Fix null ref.

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Type data
	  should not be static.

	* Mono.Debugging.Evaluation/NRefactoryResolverVisitor.cs:
	  Improved resolution of generic types.

2010-03-01  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs:
	* Mono.Debugging.Evaluation/NRefactoryEvaluator.cs: Add
	  support for indexer with more than one parameter.

2010-02-26  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/EvaluationOptions.cs: Added clone
	  method.

	* Mono.Debugging.Evaluation/ObjectValueAdaptor.cs: Fix crash
	  when parsing enums.

	* Mono.Debugging.Evaluation/RawViewSource.cs:
	* Mono.Debugging.Evaluation/BaseTypeViewSource.cs:
	* Mono.Debugging.Evaluation/FilteredMembersSource.cs: Reset
	  the child selector for values which are only visual group of
	  members.

2010-02-24  Lluis Sanchez Gual  <lluis@novell.com>

	* Mono.Debugging.Client/StackFrame.cs: Add null check.

2010-02-22  Lluis Sanchez Gual  <lluis@novell.com>
